update config file

--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: drzel's Umbrella
+email: sheldon.johnson@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is the personal blog of Sheldon J. Johnson. I'll post things
+  as I learn them, to keep track of things as I learn them.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://drzel.github.com/blog" # the base hostname & protocol for your site
+twitter_username: drzel
+github_username:  drzel
 
 # Build settings
 markdown: kramdown
