change tag line

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: drzel's Umbrella
 email: sheldon.johnson@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   This is the personal blog of Sheldon J. Johnson. I'll post things
-  as I learn them, to keep track of things as I learn them.
+  as I learn them.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://drzel.github.com" # the base hostname & protocol for your site
 twitter_username: drzel
